style: add transition classes to html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
 	lang="en"
-	class="text-slate-800 bg-slate-50 dark:text-slate-50 dark:bg-slate-950"
+	class="text-slate-800 bg-slate-50 dark:text-slate-50 dark:bg-slate-950 transition-colors duration-300"
 >
 	<head>
 		<meta charset="UTF-8" />
